# games

./: .gitignore  CMakeLists.txt  main.cpp
include/: constants.h  game.hpp  player.hpp  state.h  state.hpp
include/games/tic_tac_toe/: tic_tac_toe.h  tic_tac_toe.hpp  tic_tac_toe_state.h  tic_tac_toe_state.hpp
src/: CMakeLists.txt  main.cpp  tic_tac_toe.cpp  tic_tac_toe_state.h
src/games/: CMakeLists.txt
src/games/tic_tac_toe/: CMakeLists.txt  tic_tac_toe.cpp  tic_tac_toe_state.cpp
